--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
   },
   "homepage": "https://github.com/suvanl/delet3#readme",
   "dependencies": {
-    "discord.js": "github:discordjs/discord.js"
+    "@keyv/mongo": "^1.1.0",
+    "chalk": "^3.0.0",
+    "discord.js": "github:discordjs/discord.js",
+    "keyv": "^4.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0"
   }
 }
