--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@keyv/mongo": "^1.1.0",
     "chalk": "^3.0.0",
     "discord.js": "github:discordjs/discord.js",
+    "dotenv": "^8.2.0",
     "keyv": "^4.0.0"
   },
   "devDependencies": {
