--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "chalk": "^3.0.0",
     "discord.js": "github:discordjs/discord.js",
     "dotenv": "^8.2.0",
-    "keyv": "^4.0.0"
+    "keyv": "^4.0.0",
+    "moment": "^2.24.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0"
