add database user login/register functionality

--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
   },
   "homepage": "https://github.com/suvanl/delet3#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "chalk": "^3.0.0",
     "discord.js": "github:discordjs/discord.js",
     "dotenv": "^8.2.0",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "mongoose": "^5.8.11",
     "mongoose-timestamp": "^0.6.0",
     "restify": "^8.5.1",
-    "restify-errors": "^8.0.2"
+    "restify-errors": "^8.0.2",
+    "restify-jwt-community": "^1.1.2"
   },
   "devDependencies": {
     "eslint": "^6.8.0"
