--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.24.0",
     "mongoose": "^5.8.11",
     "mongoose-timestamp": "^0.6.0",
+    "node-fetch": "^2.6.0",
     "restify": "^8.5.1",
     "restify-errors": "^8.0.2",
     "restify-jwt-community": "^1.1.2"
