--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,8 @@ NODE_ENV=development
 # Bot token
 TOKEN=
 
-# Bot prefix (just for now)
-PREFIX=
+# Bot owner ID
+OWNER_ID=
 
 # MongoDB
 MONGO_STRING=
@@ -14,7 +14,11 @@ MONGO_STRING=
 PORT=
 
 # REST API base URL
-BASE_URL=
+URL=
+
+# REST API login
+DB_EMAIL=
+DB_PASS=
 
 # JWT secret
 JWT_SECRET=
