--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "chalk": "^3.0.0",
-    "discord.js": "github:discordjs/discord.js",
+    "discord.js": "^12.0.2",
     "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
+    "klaw": "^3.0.0",
     "moment": "^2.24.0",
     "mongoose": "^5.8.11",
     "mongoose-timestamp": "^0.6.0",
