--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "chalk": "^3.0.0",
+    "common-tags": "^1.8.0",
     "discord.js": "^12.0.2",
     "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
@@ -32,6 +33,7 @@
     "restify-jwt-community": "^1.1.2"
   },
   "devDependencies": {
-    "eslint": "^6.8.0"
+    "eslint": "^6.8.0",
+    "jest": "^25.1.0"
   }
 }
