--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "delet³ for Discord",
   "main": "index.js",
   "scripts": {
-    "test": "jest && eslint ."
+    "test": "jest",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
