--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/suvanl/delet3#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "canvas": "^2.6.1",
     "chalk": "^3.0.0",
     "common-tags": "^1.8.0",
     "discord.js": "^12.0.2",
