--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
   },
   "devDependencies": {
     "eslint": "^6.8.0",
-    "jest": "^25.1.0",
-    "jsdoc": "^3.6.3"
+    "jest": "^25.1.0"
   }
 }
