--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "common-tags": "^1.8.0",
     "discord.js": "^12.0.2",
     "dotenv": "^8.2.0",
+    "html-entities": "^1.2.1",
     "jsonwebtoken": "^8.5.1",
     "klaw": "^3.0.0",
     "moment": "^2.24.0",
