--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
   - source: /core/locales/en-GB.json
-    translation: '%original_path%/%locale%.%file_extension%'
+    translation: /core/locales/%locale%.%file_extension%
