--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/suvanl/delet3#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "canvas": "^2.6.1",
     "chalk": "^4.1.0",
     "common-tags": "^1.8.0",
     "discord.js": "^12.2.0",
@@ -26,8 +27,8 @@
     "html-entities": "^1.3.1",
     "jsonwebtoken": "^8.5.1",
     "klaw": "^3.0.0",
-    "moment": "^2.26.0",
-    "mongoose": "^5.9.19",
+    "moment": "^2.27.0",
+    "mongoose": "^5.9.28",
     "mongoose-timestamp": "^0.6.0",
     "node-fetch": "^2.6.0",
     "restify": "^8.5.1",
@@ -35,7 +36,7 @@
     "restify-jwt-community": "^1.1.4"
   },
   "devDependencies": {
-    "eslint": "^7.2.0",
-    "jest": "^26.0.1"
+    "eslint": "^7.6.0",
+    "jest": "^26.3.0"
   }
 }
