--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "restify-jwt-community": "^1.1.12"
   },
   "devDependencies": {
-    "eslint": "^7.25.0",
-    "jest": "^26.6.3"
+    "chai": "^4.3.4",
+    "eslint": "^7.25.0"
   }
 }
