--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   },
   "homepage": "https://github.com/suvanl/delet3#readme",
   "dependencies": {
+    "@discordjs/rest": "^0.1.0-canary.0",
     "bcryptjs": "^2.4.3",
     "canvas": "^2.8.0",
     "chalk": "^4.1.1",
     "common-tags": "^1.8.0",
+    "discord-api-types": "^0.22.0",
     "discord.js": "^13.0.1",
     "dotenv": "^10.0.0",
     "html-entities": "^2.3.2",
