--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "lint": "eslint .",
     "start": "node index.js",
+    "start-deploy": "node index.js --deploy",
     "dev": "nodemon",
+    "dev-deploy": "nodemon index.js --deploy",
     "prod": "pm2 start delet3",
     "prod-monit": "pm2 start delet3 && pm2 monit"
   },
