--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "3.0.0-alpha",
   "description": "delet³ for Discord",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "lint": "eslint .",
     "start": "node index.js",
@@ -27,7 +28,7 @@
     "@discordjs/rest": "^0.1.0-canary.0",
     "bcryptjs": "^2.4.3",
     "canvas": "^2.8.0",
-    "chalk": "^4.1.2",
+    "chalk": "^5.0.1",
     "common-tags": "^1.8.2",
     "discord-api-types": "^0.25.2",
     "discord.js": "^13.6.0",
@@ -36,7 +37,7 @@
     "jsonwebtoken": "^8.5.1",
     "klaw": "^4.0.1",
     "moment": "^2.29.2",
-    "mongoose": "^5.13.9",
+    "mongoose": "^6.2.10",
     "mongoose-timestamp": "^0.6.0",
     "node-fetch": "^3.1.1",
     "restify": "^8.6.0",
