--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "delet3",
-  "version": "3.0.0-alpha",
+  "version": "3.0.0-alpha.1",
   "description": "delet³ for Discord",
   "main": "index.js",
   "type": "module",
