--- a/package.json
+++ b/package.json
@@ -28,14 +28,14 @@
   },
   "homepage": "https://github.com/suvanl/delet3#readme",
   "dependencies": {
-    "@discordjs/rest": "^0.1.0-canary.0",
+    "@discordjs/rest": "^0.3.0",
     "bcryptjs": "^2.4.3",
     "canvas": "^2.9.1",
     "chalk": "^5.0.1",
     "common-tags": "^1.8.2",
-    "discord-api-types": "^0.25.2",
+    "discord-api-types": "^0.31.1",
     "discord.js": "^13.6.0",
-    "dotenv": "^10.0.0",
+    "dotenv": "^16.0.0",
     "html-entities": "^2.3.2",
     "jsonwebtoken": "^8.5.1",
     "klaw": "^4.0.1",
@@ -50,6 +50,6 @@
   },
   "devDependencies": {
     "chai": "^4.3.4",
-    "eslint": "^7.25.0"
+    "eslint": "^8.13.0"
   }
 }
