--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "mongoose": "^6.2.10",
     "mongoose-timestamp": "^0.6.0",
     "node-fetch": "^3.1.1",
+    "redis": "^4.0.6",
     "restify": "^8.6.0",
     "restify-errors": "^8.0.2",
     "restify-jwt-community": "^1.1.21",
