--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,5 +1,7 @@
 commit_message: 'New translations (%original_file_name% -> %language%)'
 append_commit_message: false
+pull_request_title: "(auto-generated) New Crowdin updates"
+pull_request_labels: ["crowdin", "l10n"]
 
 files:
   - source: /core/locales/en-GB.json
