--- a/package.json
+++ b/package.json
@@ -29,21 +29,21 @@
   "homepage": "https://github.com/suvanl/delet3#readme",
   "dependencies": {
     "@discordjs/rest": "^0.3.0",
-    "canvas": "^2.9.1",
+    "canvas": "^2.9.3",
     "chalk": "^5.0.1",
     "common-tags": "^1.8.2",
     "discord-api-types": "^0.31.2",
     "discord.js": "^13.7.0",
     "dotenv": "^16.0.1",
+    "eslint": "^8.20.0",
     "html-entities": "^2.3.3",
     "klaw": "^4.0.1",
-    "luxon": "^2.4.0",
-    "node-fetch": "^3.2.4",
-    "redis": "^4.1.0",
+    "luxon": "^3.0.1",
+    "node-fetch": "^3.2.9",
+    "redis": "^4.2.0",
     "semver": "^7.3.7"
   },
   "devDependencies": {
-    "chai": "^4.3.6",
-    "eslint": "^8.15.0"
+    "chai": "^4.3.6"
   }
 }
